feat: Refactor Auth structure, add CORS, refresh token, env config, and SNS login

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ target/
 
 /target
 application.properties
+application.yml
 .env
 
 ### STS ###
@@ -16,5 +17,3 @@ application.properties
 .settings
 .springBeans
 .sts4-cache
-
-
